--- a/lic_platform_system/pom.xml
+++ b/lic_platform_system/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.sanpiao</groupId>
-	<artifactId>lic_platform_common</artifactId>
+	<artifactId>lic_platform_system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>lic_platform_common</name>
+	<name>lic_platform_system</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -34,11 +34,6 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
